Fixes menu alignment on desktop view

--- a/src/scss/styles-experimental.scss
+++ b/src/scss/styles-experimental.scss
@@ -251,8 +251,15 @@ body {
         overflow: hidden;
     }
 
+    .nav {
+        display: grid;
+        justify-items: left;
+    }
+
     .nav-link {
+        justify-self: start;
         text-decoration: none;
+
 
         &:hover {
             text-decoration: underline;
